--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								<!-- Add more projects as needed -->
 							</ul>
 						
-							<p>Stay Tuned for more...</p>
+							<p>If you liked my work, drop me a message <a href="#contact">here</a> or connect with me <a href="https://www.linkedin.com/in/pranav-tyagii/">here</a>.</p>
 						</article>
 
 
