update home page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="font-size: 5em;">Pranav Tyagi</h1>
-								<p style="font-size: 0.9em;">100% Human-Crafted, Not AI Generated. <br> ¯\_(ツ)_/¯</p>
+								<p style="font-size: 0.9em;">100% Human-Crafted, Not AI Generated.</p>
 							</div>
 						</div>
 						
